いろいろと実装。ビルドエラー発生中。。。
